my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_local_untyped/ESYNTAX_local_untyped.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_local_untyped.dml:12:11: error ESYNTAX: syntax error at ';': variable name omitted
